fix: properly display overflowing todos

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -17,6 +17,7 @@
   color: #ffffff;
   background-color: #2d2d2d;
   font-family: Arial, Helvetica, sans-serif;
+  overflow: hidden;
 }
 
 /* Resets */
@@ -76,7 +77,14 @@
   display: flex;
   flex-direction: column;
   padding: 1rem;
+  padding-top: 0.5rem;
   gap: 1rem;
+  margin-top: 1rem;
+  height: 80%;
+  width: 100%;
+  overflow-y: auto;
+  scrollbar-width: thin;
+  scrollbar-color: rgba(255, 255, 255, 0.6) rgba(255, 255, 255, 0.1);
 }
 .todo-item {
   background-color: rgba(255, 255, 255, 0.2);
